Ajustes en la descripción
No quedaba claro la fase del proyecto

--- a/excuses.html
+++ b/excuses.html
@@ -42,7 +42,7 @@
         <div class="div-generateExcuses">
         
           <div class="div-excuse">
-            <div id="excuses" class=" p-excuses">Ya no quiero programar porque...</div>
+            <div id="excuses" class=" p-excuses">Ya no puedo programar porque...</div>
            
           </div>
           <div class="div-index">
