--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="div-dashboard">
       <div class="head-dashboard">
         <h1>
-          Este es un proyecto personal aun en desarrollo enfocado a presenta ejercicios JS y resolverlos
+          Este es un proyecto personal aun en desarrollo enfocado a presentar ejercicios JS y resolverlos
         </h1>
       </div>
 
