Ajustes menores en el resposive
Ajuste el navbar para que fuera funcional en dispositivos móviles

--- a/index.html
+++ b/index.html
@@ -19,29 +19,29 @@
         <p class="text-title">Navbar</p>
       </div>
 
-      <nav>
-        <a href="arrayEj.html 
+      <nav >
+        <div class="div-containerBtnI">
+  
+  
+          <a href="arrayEj.html 
+            ">
+            <button class="btn-pagesNav">Numericos</button>
+          </a>
+          <a href="index.html  
           ">
-          <button class="btn-pagesNav">Numericos</button>
-        </a>
-        <a href="index.html  
+            <button class="btn-pagesNav">Pagina principal</button>
+          </a>
+          <a href="excuses.html  
         ">
-        <button class="btn-pagesNav">Pagina principal</button>
-      </a>
-
-      <a href="excuses.html  
-      ">
-      <button class="btn-pagesNav">Generador de excusas</button>
-    </a>
-
+            <button class="btn-pagesNav">Generador de excusas</button>
+          </a>
    
-
-      </nav>
+         </div>     </nav>  
     </div>
 
     <!-- Aqui inicia el codigo  -->
     <div class="div-dashboard">
-      <div class="head-dashboard">
+      <div class="head-dashboardPage">
         <h1>
           Este es un proyecto personal aun en desarrollo enfocado a presentar ejercicios JS y resolverlos
         </h1>
