Actualización de estilos
Ajuste el navbar en las pagina y agregue estilos en galeria pixel art

--- a/excuses.html
+++ b/excuses.html
@@ -16,24 +16,16 @@
       <div class="head-dashboard">
         <p class="text-title">Navbar</p>
       </div>
-      <nav >
+      <nav>
         <div class="div-containerBtnI">
-  
-  
-          <a href="arrayEj.html 
-            ">
-            <button class="btn-pagesNav">Numericos</button>
-          </a>
-          <a href="index.html  
-          ">
-            <button class="btn-pagesNav">Pagina principal</button>
-          </a>
-          <a href="excuses.html  
-        ">
-            <button class="btn-pagesNav">Generador de excusas</button>
-          </a>
-   
-         </div>     </nav>  
+
+          <a href="photoCarousel.html"><button class="btn-pagesNav">Galeria</button></a>
+          <a href="arrayEj.html"><button class="btn-pagesNav">Numéricos</button></a>
+          <a href="index.html"><button class="btn-pagesNav">Página principal</button></a>
+          <a href="excuses.html"><button class="btn-pagesNav">Generador de excusas</button></a>
+          <a href="mysite.html"><button class="btn-pagesNav">Mi sitio</button></a>
+        </div>
+      </nav>
     </div>
     <!-- Aqui inicia el codigo  -->
     <div class="div-dashboard">
