--- a/mysite.html
+++ b/mysite.html
@@ -18,10 +18,12 @@
       </div>
       <nav>
         <div class="div-containerBtnI">
-          <p>Para efectos de entrega aún falta agregar links</p>
+
+          <a href="photoCarousel.html"><button class="btn-pagesNav">Galeria</button></a>
           <a href="arrayEj.html"><button class="btn-pagesNav">Numéricos</button></a>
           <a href="index.html"><button class="btn-pagesNav">Página principal</button></a>
           <a href="excuses.html"><button class="btn-pagesNav">Generador de excusas</button></a>
+          <a href="mysite.html"><button class="btn-pagesNav">Mi sitio</button></a>
         </div>
       </nav>
     </div>
@@ -32,7 +34,7 @@
 
         <div class="container">
             <h1>Perfil de Usuario</h1>
-            <img class="profile-photo" src="https://curriculum-phi-three.vercel.app/img/profilePhoto.jpg   " alt="Foto de usuario" />
+            <img class="profile-photo" src="./assets/images/photoJames.png " alt="Foto de usuario" />
         
             <div class="bio">
               <p>Hola, soy James Kalith, un apasionado de la tecnología, los videojuegos retro y la música instrumental. Me encanta aprender cosas nuevas y compartir contenido interesante con los demás.</p>
