--- a/validatePasswords.html
+++ b/validatePasswords.html
@@ -18,10 +18,12 @@
 
       <nav>
         <div class="div-containerBtnI">
-          <p>Para efectos de entrega aún falta agregar links</p>
+
+          <a href="photoCarousel.html"><button class="btn-pagesNav">Galeria</button></a>
           <a href="arrayEj.html"><button class="btn-pagesNav">Numéricos</button></a>
           <a href="index.html"><button class="btn-pagesNav">Página principal</button></a>
           <a href="excuses.html"><button class="btn-pagesNav">Generador de excusas</button></a>
+          <a href="mysite.html"><button class="btn-pagesNav">Mi sitio</button></a>
         </div>
       </nav>
     </div>
